# Streamlit-Scanner-App

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  app.py  constraints.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: quality-and-security.yml
.streamlit/: config.toml  secrets.example.toml
Dependencies/: .env.example  dhan_token_setup.py
backend/: __init__.py  ai_cache_integrity.py  ai_runtime.py  ai_validation.py  charts.py  config.py  daily_data_loader.py  dhan_client.py  health.py  indicators.py  parquet_stats.py  scanner_base.py  screener_registry.py  universe_builder.py  universe_loader.py  url_safety.py
backend/admin/: __init__.py  config_service.py  roles_service.py
backend/audit/: __init__.py  recorder.py
backend/auth/: roles.py  session.py
backend/config/: __init__.py  settings.py
backend/data_quality/: __init__.py  candles.py
backend/fundamentals/: __init__.py  fundamental_agent.py  fundamentals_cache.py  pdf_reader.py  screener_in_client.py
backend/ipo/: __init__.py  dashboard.py  manual_extraction.py  models.py  repository.py  scorecard.py  url_canonical.py  verdict.py
backend/ipo/agents/: __init__.py  financial_extractor.py
backend/ipo/documents/: __init__.py  downloader.py  section_classifier.py  table_extractor.py
backend/ipo/financials/: __init__.py  ratio_engine.py
backend/ipo/scoring/: __init__.py  caution_flags.py  factor_derivation.py  recommendation.py  service.py
backend/ipo/sources/: __init__.py  enrichment.py  sebi.py
backend/jobs/: __init__.py  compute_forward_returns.py  daily_scan_config.py  run_daily_scan.py  run_ipo_screener.py  scan_ipo_filings.py
backend/notifications/: __init__.py  config.py  email_channel.py  render.py  report.py  service.py  telegram_channel.py
backend/observability/: __init__.py
backend/scanning/: __init__.py  comparison.py  result_contract.py  service.py
backend/scoring/: __init__.py  components.py  config.py  model.py  ordering.py
backend/security/: __init__.py  prompt_injection.py  redaction.py
backend/sixty_seven/: __init__.py  agent.py  search_client.py  shortlister.py
backend/storage/: __init__.py  database.py  ipo_repository.py  models.py  repository.py
backend/technical/: __init__.py  knowledge.py  patterns.py  technical_agent.py  tools.py
backend/validation/: __init__.py  _pricing.py  benchmarks.py  forward_return.py  metrics.py  sectors.py  service.py
config/: benchmarks.yaml  daily_scans.example.yaml  daily_scans.yaml  scoring_model.yaml
data/universes/: hemant_good_200.csv  hemant_good_45.csv  hemant_super_45.csv  hemant_super_good_200_union.csv
docs/: adding-a-screener.md  operations.md
docs/architecture/: README.md  alert-002-alert-preferences.md  audit-2026-06.md  auth-003-handoff.md  auth-003-role-model.md  high-level-design.md  ipo-001-domain-score-contract.md  ipo-002-sebi-filing-ingestion.md  ipo-003-document-downloader-cache.md  ipo-004-manual-extraction-mvp.md  ipo-005-ratio-engine.md  ipo-006-factor-derivation-and-verdict.md  ipo-007-dashboard.md  ipo-008-screener-orchestration.md  ipo-009-serpapi-enrichment.md  ipo-010-ai-extraction-proposals.md  obs-003-audit-log.md  rank-001-final-scoring-model.md  rank-002-handoff.md  refactor-002-repository-boundary.md  refactor-003-ai-runtime.md  scan-002-handoff.md  scan-run-persistence.md  valid-001-forward-return-validation.md  valid-002-handoff.md
docs/architecture/components/: app-orchestration.md  audit-log.md  authentication.md  charts-visualization.md  configuration.md  daily-scan-job.md  scoring.md  (+21 more)
migrations/: env.py  script.py.mako
migrations/versions/: 20260604scan002_create_scan_runs_and_scan_results.py  20260610scan004_add_symbols_scanned_to_scan_runs.py  20260613prov003_create_ai_evaluations.py  20260616data001_add_scan_run_data_quality.py  20260617obs003_create_audit_logs.py  20260618valid001_create_signal_forward_returns.py  20260623auth003_create_user_roles.py  20260629ipo001_create_ipo_domain.py  20260630ipo002_add_sebi_filing_identity.py  20260630ipo003_add_document_cache.py  20260701ipo004_create_manual_extractions.py  20260703ipo005_add_ratio_inputs.py  20260713ipo006_screener_artifacts.py
screeners/: __init__.py  bollinger_band_reversal.py  bollinger_knoxville_buy.py  bollinger_lower_band.py  cpr_yearly.py  ema200_14percent_below.py  envelope.py  envelope_knoxville_buy.py  green_candles_20pct_up.py  heikin_ashi_supertrend.py  sixty_seven_ka_funda.py  stochastic_swing.py  technical_analysis.py  week52_low_ceyhun.py
tests/: conftest.py  test_admin_roles_service.py  test_ai_cache_integrity.py  test_ai_runtime.py  test_ai_validation.py  test_app_audit_page.py  test_app_comparison_page.py  test_app_config_page.py  test_app_fundamentals_panel.py  test_app_health_page.py  test_app_history_page.py  test_app_ipo_manual_page.py  test_app_ipo_page.py  test_app_orchestration.py  test_app_parameter_controls.py  test_app_roles_page.py  test_app_scan_view.py  test_app_status_panel.py  test_app_validation_page.py  test_audit_recorder.py  test_audit_repository.py  test_auth_roles.py  test_auth_session.py  test_candle_data_quality.py  test_charts.py  test_compute_forward_returns_job.py  test_config.py  test_config_service.py  test_config_service_alert_prefs.py  test_daily_data_loader.py  test_daily_data_loader_footer_stats.py  test_daily_scan_config.py  test_daily_scan_job.py  test_dhan_client.py  test_docker_artifacts.py  test_forward_return_calculator.py  test_forward_return_service.py  test_fundamental_agent.py  test_fundamentals_cache.py  test_health.py  (+72 more)
tests/fixtures/: ai_prompt_injection_cases.json
ui/: __init__.py  audit_page.py  chart_cache.py  common.py  comparison_page.py  config_page.py  fundamentals_panel.py  health_page.py  history_page.py  ipo_manual_page.py  ipo_page.py  parameter_controls.py  roles_page.py  scan_view.py  status_panel.py  validation_page.py
(+24 files in other folders)
