# Project-wide tool configuration.
#
# Beginner note:
# This repo is an application, not a published package, so there is no
# [project] build metadata here. The file exists to give the quality tools
# (Ruff today, mypy in QUAL-002) one explicit, reviewable home. Without a
# config file Ruff runs with its tiny default rule set (E4/E7/E9/F), which
# silently skips import sorting, bug-prone patterns, and modernization checks.

[tool.ruff]
# Measured against this codebase: at 88 columns there are ~480 long lines, at
# 120 there is 1. The code was written to a ~120-column style, so codifying
# 120 keeps the lint signal about real problems instead of wrapping churn.
line-length = 120
# CI runs Python 3.11 (see .github/workflows/quality-and-security.yml).
target-version = "py311"

[tool.ruff.lint]
# E/W   pycodestyle errors and warnings
# F     pyflakes (undefined names, unused imports/variables)
# I     import sorting
# B     flake8-bugbear (likely bugs: mutable defaults, loop-var closures, ...)
# UP    pyupgrade (modern 3.11+ syntax)
# C4    comprehension correctness/efficiency
# SIM   simplifiable code
# RUF   Ruff-native checks (mutable class defaults, unused noqa, ...)
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
# Keep Ruff's ambiguous-Unicode checks enabled. These are the only two
# confusable characters the project uses deliberately in formulas and prose;
# every other look-alike character should continue to produce a lint warning.
allowed-confusables = ["–", "∪"]
# `# noqa: BLE001` comments document intentional broad-except blocks for a
# stricter future rule set. BLE is not enabled yet, so tell Ruff the code is
# external-tool noqa rather than letting RUF100 delete the documentation.
external = ["BLE"]

[tool.mypy]
# CI runs 3.11; local development may run newer. Pinning the target version
# keeps local runs honest about what CI will accept.
python_version = "3.11"
# QUAL-004 started tests/ adoption module-by-module (conftest + the two
# policy/guard tests); QUAL-007 finished it — the whole test tree is checked,
# so a fixture or fake that drifts from the typed application API fails here
# before it fails at runtime.
files = [
    "app.py",
    "backend",
    "screeners",
    "ui",
    "Dependencies",
    "tests",
]
# First-adoption strictness: check function bodies everywhere (including
# untyped ones) without yet *requiring* annotations on every def. Stricter
# flags (disallow_untyped_defs) and full tests/ coverage are deliberate follow-ups.
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
# Catch stale or mistyped suppressions throughout the checked application.
# Optional packages differ between local machines and CI, so only those exact
# import/assignment lines also suppress the environment-dependent unused-ignore.
warn_unused_ignores = true

[[tool.mypy.overrides]]
# QUAL-007's remaining debt: these test modules still carry pre-typing idioms
# (fake clients passed where the real client class is annotated, records-dict
# rows, unannotated accumulators) — ~385 mechanical errors at adoption time.
# Every OTHER test module is fully checked, and a NEW test file is checked by
# default. Shrink this list as modules come clean; NEVER add to it — a new
# entry means new untyped debt, which is exactly what this gate exists to
# prevent.
# NOTE: tests/ is not a package (no __init__.py), so mypy sees these as
# top-level modules — no "tests." prefix.
module = [
    "test_app_comparison_page",
    "test_app_validation_page",
    "test_auth_session",
    "test_daily_data_loader",
    "test_daily_scan_job",
    "test_dhan_client",
    "test_forward_return_service",
    "test_indicators",
    "test_ipo_document_downloader",
    "test_ipo_models",
    "test_ipo_ratio_engine",
    "test_ipo_repository",
    "test_ipo_scorecard",
    "test_notifications_channels",
    "test_notifications_report",
    "test_notifications_service",
    "test_pdf_reader",
    "test_real_screeners",
    "test_result_contract",
    "test_scan_run_integration",
    "test_scan_service",
    "test_scan_storage_repository",
    "test_scanner_base",
    "test_scoring_model",
    "test_screener_in_client",
    "test_screener_registry",
    "test_sixty_seven_agent",
    "test_sixty_seven_search_client",
    "test_technical_analysis_agent",
]
ignore_errors = true

[[tool.mypy.overrides]]
# Third-party packages that ship no type stubs (and optional accelerators
# that are not installed on CI). pandas graduated OUT of this list in
# QUAL-006: pandas-stubs (pinned to the pandas 2.3.3 series) now types every
# DataFrame/Series call site in the checked application code.
module = [
    "dhanhq.*",
    "pandas_ta.*",
    "pyarrow.*",
    "pypdf.*",
    "talib.*",
]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
# B017: tests intentionally assert on bare Exception for defensive paths.
# RUF012: test fakes use mutable class attributes as fixtures; ClassVar
# annotations there add noise without catching real bugs.
# C408: `dict(key=value)` factory builders with `**overrides` merging are a
# deliberate, readable test idiom here; literal-dict churn adds nothing.
"tests/**" = ["B017", "C408", "RUF012"]
# RUF001/RUF003: the shared prompt-injection module and its tests deliberately
# embed Cyrillic/Greek homoglyphs and fullwidth/curly-quote look-alikes —
# detecting and folding those IS the feature, so the ambiguous-Unicode lint is
# noise in exactly these two files (it stays on everywhere else).
"backend/security/prompt_injection.py" = ["RUF001", "RUF003"]
"tests/test_prompt_injection.py" = ["RUF001", "RUF003"]
